--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,31 @@
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="ru.vsu.cs.app.bookstore.search_activity.SearchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+
         <activity
             android:name="ru.vsu.cs.app.bookstore.detailed_info_activity.FullInfoActivity"
             android:label="@string/title_activity_full_info" >
         </activity>
 
+        <activity
+            android:name="ru.vsu.cs.app.bookstore.favorite_list_activity.FavoriteListActivity"
+            android:label="@string/title_activity_favorite_list" >
+        </activity>
     </application>
 
 </manifest>
